--- a/src/webapp/fluid-components/css/infusion-theme.css
+++ b/src/webapp/fluid-components/css/infusion-theme.css
@@ -29,7 +29,7 @@
 	border-width: 1px;
 	border-style: solid;
 	font-weight: bolder;
-	font-size: 1.1em;
+	font-size: 1.06em;
 	color: #FFF;
 	height: 32px;
 	padding-left: 2em;
@@ -67,8 +67,103 @@
 	background-color: #999;
 }
 
-.infusion table {
-	/*
-border-collapse: collapse;
-*/
+
+/* jQuery UI dialog */
+
+.infusion .ui-dialog, .infusion.ui-dialog {
+	background-color: #FFF;
+	border: 1px solid #7C7E80;
 }
+
+.infusion .ui-dialog .ui-dialog-titlebar,
+.infusion.ui-dialog .ui-dialog-titlebar {
+	border-bottom: 1px solid #7C7E80;
+	background: #427ABE;
+	padding: 0px;
+	height: 28px;
+	_height: 29px;
+}
+
+.infusion .ui-dialog.ui-draggable .ui-dialog-titlebar,
+.infusion.ui-dialog.ui-draggable .ui-dialog-titlebar {
+	cursor: move;
+}
+
+.infusion .ui-dialog .ui-dialog-titlebar-close,
+.infusion.ui-dialog .ui-dialog-titlebar-close {
+	width: 17px;
+	height: 17px;
+	background: url(../images/infusion-theme/x-close-lrg.png) no-repeat 1px 1px;
+	border: 1px solid transparent;
+	position:absolute;
+	top: 6px;
+	right: 7px;
+	cursor: pointer;
+}
+
+.infusion .ui-dialog .ui-dialog-titlebar-close span,
+.infusion.ui-dialog .ui-dialog-titlebar-close span {
+	display: none;
+}
+
+.infusion .ui-dialog .ui-dialog-titlebar-close-hover,
+.infusion.ui-dialog .ui-dialog-titlebar-close-hover {
+	background: url(../images/infusion-theme/x-close-lrg.png) no-repeat 1px 1px;
+	background-color: #1E67BE;
+	border: 1px solid #CCC;
+}
+
+.infusion .ui-dialog .ui-dialog-title,
+.infusion.ui-dialog .ui-dialog-title {
+	margin-left: 5px;
+	color: white;
+	font-weight: normal;
+	position: relative;
+	top: 7px;
+	left: 4px;
+	font-size: 1.16em;
+}
+
+.infusion .ui-dialog .ui-dialog-content,
+.infusion.ui-dialog .ui-dialog-content {
+	margin: 1.2em;
+}
+
+.infusion .ui-dialog .ui-dialog-buttonpane,
+.infusion.ui-dialog .ui-dialog-buttonpane {
+	position: absolute;
+	bottom: 8px;
+	right: 12px;
+	width: 100%;
+	text-align: right;
+}
+
+.infusion .ui-dialog .ui-dialog-buttonpane button,
+.infusion.ui-dialog .ui-dialog-buttonpane button {
+	margin: 6px;
+}
+
+/* Dialog handle styles */
+.infusion .ui-dialog .ui-resizable-n,
+.infusion.ui-dialog .ui-resizable-n { cursor: n-resize; height: 6px; width: 100%; top: 0px; left: 0px; background: transparent url(i/dialog-n.gif) repeat scroll center top; }
+
+.infusion .ui-dialog .ui-resizable-s,
+.infusion.ui-dialog .ui-resizable-s { cursor: s-resize; height: 8px; width: 100%; bottom: 0px; left: 0px; background: transparent url(i/dialog-s.gif) repeat scroll center top; }
+
+.infusion .ui-dialog .ui-resizable-e,
+.infusion.ui-dialog .ui-resizable-e { cursor: e-resize; width: 7px; right: 0px; top: 0px; height: 100%; background: transparent url(i/dialog-e.gif) repeat scroll right center; }
+
+.infusion .ui-dialog .ui-resizable-w,
+.infusion.ui-dialog .ui-resizable-w { cursor: w-resize; width: 7px; left: 0px; top: 0px; height: 100%; background: transparent url(i/dialog-w.gif) repeat scroll right center; }
+
+.infusion .ui-dialog .ui-resizable-se,
+.infusion.ui-dialog .ui-resizable-se { cursor: se-resize; width: 9px; height: 9px; right: 0px; bottom: 0px; background: transparent url(i/dialog-se.gif); }
+
+.infusion .ui-dialog .ui-resizable-sw,
+.infusion.ui-dialog .ui-resizable-sw { cursor: sw-resize; width: 9px; height: 9px; left: 0px; bottom: 0px; background: transparent url(i/dialog-sw.gif); }
+
+.infusion .ui-dialog .ui-resizable-nw,
+.infusion.ui-dialog .ui-resizable-nw { cursor: nw-resize; width: 9px; height: 29px; left: 0px; top: 0px; background: transparent url(i/dialog-nw.gif); }
+
+.infusion .ui-dialog .ui-resizable-ne,
+.infusion.ui-dialog .ui-resizable-ne { cursor: ne-resize; width: 9px; height: 29px; right: 0px; top: 0px; background: transparent url(i/dialog-ne.gif); }
